added volley and connection checker

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,6 +9,7 @@
         android:id="@+id/webview"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:paddingLeft="30dp"
     android:layout_width="180dp"
     android:layout_height="170dp" />
 
