--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="@drawable/hp_logo">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:id="@+id/number"/>
+    <Button
+        android:layout_width="5dp"
+        android:layout_height="5dp"
+        android:id="@+id/button"/>
+
 
 
 </RelativeLayout>
