--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,17 +3,32 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@drawable/hp_logo">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    <!--android:background="@drawable/hp_logo"-->
+
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/webview">
+
+    </WebView>
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:id="@+id/number"/>
+        android:layout_height="wrap_content"
+        android:hint="Enter OTP"
+        android:layout_centerInParent="true"
+        android:id="@+id/number"
+        android:background="#005c99"/>
     <Button
-        android:layout_width="5dp"
-        android:layout_height="5dp"
-        android:id="@+id/button"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:layout_below="@+id/number"
+        android:paddingTop="5dp"
+        android:background="#005c99"
+        android:layout_centerHorizontal="true"
+        android:text="Get OTP"/>
 
 
 
