--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#FFFFFF"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
     <!--android:background="@drawable/hp_logo"-->
 
@@ -17,18 +18,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter OTP"
+        android:padding="5dp"
+        android:textSize="25sp"
+        android:inputType="number"
         android:layout_centerInParent="true"
-        android:id="@+id/number"
-        android:background="#005c99"/>
+        android:id="@+id/number"/>
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button"
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/number"
-        android:paddingTop="5dp"
-        android:background="#005c99"
+        android:padding="10dp"
+        android:textColor="#FFFFFF"
+        android:background="#43A047"
         android:layout_centerHorizontal="true"
-        android:text="Get OTP"/>
+        android:text="Confirm"/>
 
 
 
