--- a/app/src/main/res/layout/activity_receipents.xml
+++ b/app/src/main/res/layout/activity_receipents.xml
@@ -4,11 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="autosms.ankur.com.autosms.SelectSenderId">
+    tools:context="autosms.ankur.com.autosms.Receipents">
 
-    <Spinner
-        android:id="@+id/senderid_spinner"
-        android:layout_width="fill_parent"
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
