--- a/app/src/main/res/layout/activity_receipents.xml
+++ b/app/src/main/res/layout/activity_receipents.xml
@@ -1,12 +1,44 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="autosms.ankur.com.autosms.Receipents">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity" >
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/getPhoneBook"
+        android:text="Select from Phone Book"/>
+
+    <TextView
+        android:paddingTop="30dp"
+        android:layout_below="@+id/getPhoneBook"
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
+        android:text="Selected Phone Numbers are : -" />
+
+    <EditText
+        android:layout_below="@+id/textView1"
+        android:paddingTop="30dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:hint="Enter Number to add the recepients"
+        android:id="@+id/setPhoneNumber"/>
+    <Button
+        android:id="@+id/setNumber"
+        android:layout_below="@+id/textView1"
+        android:paddingTop="30dp"
+        android:paddingLeft="40dp"
+        android:layout_alignRight="@+id/setPhoneNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        />
 
 </RelativeLayout>
