--- a/app/src/main/res/layout/activity_select_sender_id.xml
+++ b/app/src/main/res/layout/activity_select_sender_id.xml
@@ -11,4 +11,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_below="@+id/senderid_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonGo"
+        android:text="GO"/>
+
 </RelativeLayout>
