--- a/app/src/main/res/layout/list_elements.xml
+++ b/app/src/main/res/layout/list_elements.xml
@@ -3,4 +3,34 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffff66"
+        android:padding="5dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="0.7"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_number"
+            android:textColor="#FFFFFF"
+            android:textSize="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#43A047"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="0.3"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignRight="@+id/tv"
+            android:paddingLeft="5dp"
+            android:layout_marginLeft="5dp"
+            android:id="@+id/button"
+            android:textColor="#FFFFFF"
+            android:background="#43A047"
+            android:text="Delete"/>
+    </LinearLayout>
+
+
+
 </LinearLayout>
