--- a/app/src/main/res/layout/message_list_elements.xml
+++ b/app/src/main/res/layout/message_list_elements.xml
@@ -3,4 +3,21 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffff66"
+        android:padding="5dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="0.7"
+            android:layout_height="wrap_content"
+            android:id="@+id/messageid"
+            android:textColor="#FFFFFF"
+            android:textSize="30dp"
+            android:layout_marginTop="5dp"
+            android:background="#43A047"/>
+    </LinearLayout>
+
 </LinearLayout>
