--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,24 @@
 
     </WebView>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/webview"
+        android:text=" N V Petroleum Enterprise Message System"
+        android:textSize="14dp"
+        android:layout_marginTop="5dp"
+        android:padding="10dp"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/mybutton"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        />
+
+
+
+
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,10 +49,21 @@
         android:layout_below="@+id/number"
         android:padding="10dp"
         android:textColor="#FFFFFF"
-        android:background="#43A047"
+        android:background="@drawable/mybutton"
         android:layout_centerHorizontal="true"
         android:text="Confirm"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonresend"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/button"
+        android:padding="10dp"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/mybutton"
+        android:layout_centerHorizontal="true"
+        android:text="Resend OTP"/>
 
 
 </RelativeLayout>
