--- a/app/src/main/res/layout/activity_select_message.xml
+++ b/app/src/main/res/layout/activity_select_message.xml
@@ -9,14 +9,14 @@
         android:id="@+id/senderId"
         android:text="Select Sender Id"
         android:textColor="#FFFFFF"
-        android:background="#43A047"
+        android:background="@drawable/mybutton"
         android:textSize="20dp"
         android:padding="5dp"/>
     <Spinner
         android:id="@+id/senderid_spinner"
         android:textColor="#FFFFFF"
         android:textSize="100dp"
-        android:background="#43A047"
+        android:background="@drawable/myspinner"
         android:layout_below="@+id/senderId"
         android:layout_marginTop="20dp"
         android:layout_width="200dp"
@@ -58,7 +58,7 @@
             android:layout_marginTop="20dp"
             android:id="@+id/btnNew"
             android:textColor="#FFFFFF"
-            android:background="#43A047"
+            android:background="@drawable/mybutton"
             android:text="Add New Message"/>
         <Button
             android:layout_width="0dp"
@@ -69,7 +69,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:textColor="#FFFFFF"
-            android:background="#43A047"
+            android:background="@drawable/mybutton"
             android:id="@+id/buttonGo"
             android:text="Go To Next"/>
     </LinearLayout>
