--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,12 +5,17 @@
     android:background="#FFFFFF"
     xmlns:components="http://schemas.android.com/apk/res-auto">
 
-    <WebView
-        android:id="@+id/webview"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:paddingLeft="30dp"
-    android:layout_width="180dp"
-    android:layout_height="170dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <WebView
+            android:id="@+id/webview"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="117dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </RelativeLayout>
